feat: added api endpoint for indec funcds
